# FreeFoodDropServer

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  database.c  database.h  main.c
